tui/src/snapshots/charlene__app__tests__draw_non_modal_app.snap
---
source: tui/src/app.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ReqId Method URL Body                                                   Status│"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│Arrow keys or j/k to navigate, Enter to view details. q to quit.              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
