tui/src/snapshots/charlene__app__tests__show_error_modal_message.snap
---
source: tui/src/app.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                              ┌Error─────────────┐                              "
"                              │Test error message│                              "
"                              └◄████████████████►┘                              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
