tui/src/snapshots/charlene__app__tests__show_waiting_message.snap
---
source: tui/src/app.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ReqId Method URL Body                                                   Status│"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                         ┌──────────────────────────┐                         │"
"│                         │  Waiting for requests on │                         │"
"│                         │ localhost:8888 (press 'q'│                         │"
"│                         │         to quit)         │                         │"
"│                         └──────────────────────────┘                         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│Arrow keys or j/k to navigate, Enter to view details. q to quit.              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
